--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -15,8 +15,8 @@
 
   <tbody>
     <% @contacts.each do |contact| %>
-        <td><%= contact.name %></td>
-        <td><%= contact.customer.name %></td>
+        <td><%= link_to contact.name, contact %></td>
+        <td><%= link_to contact.customer.name, contact.customer %></td>
         <td><%= contact.telephone %></td>
         <td><%= contact.email %></td>
         <td><%= link_to 'Show', contact %></td>
