--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -2,7 +2,7 @@
 
 <p>
   <strong>Name:</strong>
-  <%= @customer.name %>
+  <%= @customer.name %><br />
 </p>
 
 
@@ -18,7 +18,7 @@
     <% @customer.contacts.each do |contact| %>
 
       <tr class="<%= cycle( "even", "odd" ) %>">
-        <td><%= contact.name %></td>
+        <td><%= link_to contact.name, contact %></td>
         <td><%= contact.telephone %>
         <td><%= contact.email %></td>
       </tr>
