--- a/app/views/work_orders/show.html.erb
+++ b/app/views/work_orders/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Customer:</strong>
+  <%= link_to @work_order.order.customer.name, @work_order.order.customer %>
+</p>
+
+<p>
   <strong>Description:</strong>
   <%= @work_order.description %>
 </p>
